# AI100

./: .gitignore  CRM + Battle100 系统架构深度分析与重构方案.md  backups_sync.bat  db_rebuild_cloud.sh  db_rebuild_local.sh  ocr_test.py  read_excel.py  read_pdf.py  run_ocr.ps1  search_excel.py  start_dev.bat
battle100/backend/: .gitignore  copy_llm_data.py  fix_enums.py  pyproject.toml  update_enums.py
battle100/backend/app/: __init__.py  cherry_hardcoded_models.json  config.py  database.py  main.py
battle100/backend/app/api/: __init__.py  audit_logs.py  auth.py  broadcast.py  dashboard.py  deps.py  goals.py  (+5 more)
battle100/backend/scratch/: add_is_stationed_column.py  analyze_dry_run_log.py  check_contract_account.py  check_contracts.py  check_del_details.py  check_deleted_broadcast.py  check_delivery_users.py  check_event_358.py  check_event_368.py  check_local_users.py  check_pending.py  check_pushed_del_status.py  check_supabase_buckets.py  check_teams.py  check_teams_hex.py  check_user_xiang.py  check_xiang_all_records.py  check_xiang_crm_record.py  check_zdcrm_view_missing.py  check_zheng_broadcasts.py  check_zheng_users.py  crm_comparison_results.json  crm_dept_names_results.json  crm_offices_results.json  crm_pushed_depts_comparison.json  crm_record_details.json  debug_crm_response.py  debug_dingtalk.py  debug_push.py  debug_station_report.py  deleted_records_inspect.json  diagnose_crm_bug.py  diagnose_dingtalk.py  diagnose_sql_step.py  diagnose_sync_84.py  diagnose_team_lights.py  diagnose_timezone.py  diagnose_weekly_report.py  diagnose_xiang_check.py  diff_reports.patch  (+76 more)
(+92 files in other folders)
